--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,6 +69,10 @@ button {
   cursor: pointer;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
@@ -1598,7 +1602,7 @@ body.no-scroll {
 }
 
 .object-taxa {
-  font-family: "Geologica";
+  font-family: "Montserrat";
   font-weight: 400;
   font-size: 20px;
   line-height: 110%;
@@ -1868,28 +1872,28 @@ body.no-scroll {
 .object-autor-wrap {
   padding: 30px 0;
   position: relative;
-}
-.object-autor-wrap::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 80%;
-  height: 1px;
-  background: url(../images/divider-object.svg) no-repeat;
-  background-size: cover;
-  transform: translateX(-50%);
-}
-.object-autor-wrap::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 76%;
-  height: 1px;
-  background: url(../images/object-after.svg) no-repeat;
-  background-size: cover;
-  transform: translateX(-50%);
+  /*      &::before {
+         content: "";
+         position: absolute;
+         top: 0;
+         left: 50%;
+         width: 80%;
+         height: 1px;
+         background: url(../images/divider-object.svg) no-repeat;
+         background-size: cover;
+         transform: translateX(-50%);
+       }
+       &::after {
+         content: "";
+         position: absolute;
+         bottom: 0;
+         left: 50%;
+         width: 76%;
+         height: 1px;
+         background: url(../images/object-after.svg) no-repeat;
+         background-size: cover;
+         transform: translateX(-50%);
+       } */
 }
 .object-autor-content {
   display: flex;
@@ -1994,7 +1998,7 @@ body.no-scroll {
   width: fit-content;
 }
 .object-attribute span {
-  font-family: "Geologica";
+  font-family: "Montserrat";
   font-weight: 400;
   font-size: 20px;
   line-height: 110%;
@@ -2109,6 +2113,34 @@ body.no-scroll {
 
 .object-gallery.mobile {
   display: none;
+}
+
+.object-autor-wrap-before {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  height: 1px;
+  transform: translateX(-50%);
+  width: 100%;
+}
+.object-autor-wrap-before img {
+  width: 90%;
+  height: 1px;
+  margin: 0 auto;
+}
+
+.object-autor-wrap-after {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  height: 1px;
+  transform: translateX(-50%);
+  width: 100%;
+}
+.object-autor-wrap-after img {
+  width: 90%;
+  height: 1px;
+  margin: 0 auto;
 }
 
 @media (max-width: 1760px) {
@@ -2273,28 +2305,28 @@ body.no-scroll {
   .object-autor-wrap {
     padding: 30px 0;
     position: relative;
-  }
-  .object-autor-wrap::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 90%;
-    height: 1px;
-    background: url(../images/divider-object.svg) no-repeat;
-    background-size: cover;
-    transform: translateX(-50%);
-  }
-  .object-autor-wrap::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 85%;
-    height: 1px;
-    background: url(../images/object-after.svg) no-repeat;
-    background-size: cover;
-    transform: translateX(-50%);
+    /*  &::before {
+       content: "";
+       position: absolute;
+       top: 0;
+       left: 50%;
+       width: 90%;
+       height: 1px;
+       background: url(../images/divider-object.svg) no-repeat;
+       background-size: cover;
+       transform: translateX(-50%);
+     }
+     &::after {
+       content: "";
+       position: absolute;
+       bottom: 0;
+       left: 50%;
+       width: 85%;
+       height: 1px;
+       background: url(../images/object-after.svg) no-repeat;
+       background-size: cover;
+       transform: translateX(-50%);
+     } */
   }
 }
 @media (max-width: 1366px) {
@@ -2622,6 +2654,12 @@ body.no-scroll {
   }
 }
 @media (max-width: 768px) {
+  .object-gallery-pagination .swiper-pagination-current {
+    font-size: 64px;
+  }
+  .object-gallery-pagination {
+    font-size: 32px;
+  }
   .object-dream__top {
     display: flex;
     flex-direction: column;
@@ -2730,6 +2768,18 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .object-gallery-pagination .swiper-pagination-current {
+    font-size: 32px;
+  }
+  .object-gallery-pagination {
+    font-size: 16px;
+  }
+  .breadcrumbs-link {
+    font-size: 12px;
+  }
+  .breadcrumbs-current {
+    font-size: 12px;
+  }
   .object-gallery.desktop {
     display: none !important;
   }
@@ -2756,28 +2806,28 @@ body.no-scroll {
   .object-autor-wrap {
     padding: 30px 0;
     position: relative;
-  }
-  .object-autor-wrap::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 95%;
-    height: 1px;
-    background: url(../images/divider-object.svg) no-repeat;
-    background-size: contain;
-    transform: translateX(-50%);
-  }
-  .object-autor-wrap::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 95%;
-    height: 1px;
-    background: url(../images/object-after.svg) no-repeat;
-    background-size: contain;
-    transform: translateX(-50%);
+    /*  &::before {
+       content: "";
+       position: absolute;
+       top: 0;
+       left: 50%;
+       width: 95%;
+       height: 1px;
+       background: url(../images/divider-object.svg) no-repeat;
+       background-size: contain;
+       transform: translateX(-50%);
+     }
+     &::after {
+       content: "";
+       position: absolute;
+       bottom: 0;
+       left: 50%;
+       width: 95%;
+       height: 1px;
+       background: url(../images/object-after.svg) no-repeat;
+       background-size: contain;
+       transform: translateX(-50%);
+     } */
   }
   .object-tag {
     font-size: 16px;
@@ -2969,8 +3019,11 @@ body.no-scroll {
   .filter-container-body {
     padding: 0;
   }
-  .object-gallery-controls-wrap {
-    display: none;
+  .object-gallery-prev {
+    padding: 15px 19px;
+  }
+  .object-gallery-next {
+    padding: 15px 19px;
   }
   .object-top {
     flex-direction: column;
