--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -70,7 +70,9 @@ button {
   padding: 0;
   cursor: pointer;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
@@ -1661,7 +1663,7 @@ body.no-scroll {
   justify-content: space-between;
 }
 .object-taxa {
-  font-family: "Geologica";
+  font-family: "Montserrat";
   font-weight: 400;
   font-size: 20px;
   line-height: 110%;
@@ -1918,7 +1920,7 @@ body.no-scroll {
     &-wrap {
       padding: 30px 0;
       position: relative;
-      &::before {
+ /*      &::before {
         content: "";
         position: absolute;
         top: 0;
@@ -1939,7 +1941,7 @@ body.no-scroll {
         background: url(../images/object-after.svg) no-repeat;
         background-size: cover;
         transform: translateX(-50%);
-      }
+      } */
     }
     display: flex;
     align-items: center;
@@ -2042,7 +2044,7 @@ body.no-scroll {
   gap:5px;
   width: fit-content;
   span {
-    font-family: "Geologica";
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 20px;
     line-height: 110%;
@@ -2167,6 +2169,36 @@ body.no-scroll {
     display: none;
   }
 }
+
+  .object-autor-wrap-before {
+ position: absolute;   
+    top: 0;
+    left: 50%;
+    height: 1px;
+    transform: translateX(-50%);
+    width: 100%;
+    img {
+          width: 90%;
+    height: 1px;
+    margin: 0 auto;
+    }
+  }
+  .object-autor-wrap-after {
+    position: absolute;    
+    bottom: 0;
+    left: 50%;
+    height: 1px;
+    transform: translateX(-50%);
+    width: 100%;
+    img {
+      width: 90%;
+      height: 1px;
+      margin: 0 auto;
+    }
+    
+  }
+
+
 @media (max-width: 1760px) {
   .catalog {
     &-filter {
@@ -2349,7 +2381,7 @@ body.no-scroll {
           &-wrap {
       padding: 30px 0;
       position: relative;
-      &::before {
+     /*  &::before {
         content: "";
         position: absolute;
         top: 0;
@@ -2370,7 +2402,7 @@ body.no-scroll {
         background: url(../images/object-after.svg) no-repeat;
         background-size: cover;
         transform: translateX(-50%);
-      }
+      } */
     }
     }
   }
@@ -2734,6 +2766,12 @@ body.no-scroll {
   }
 }
 @media (max-width: 768px) {
+  .object-gallery-pagination .swiper-pagination-current {
+    font-size: 64px;
+  }
+  .object-gallery-pagination {
+    font-size: 32px;
+  }
   .object-dream__top {
     display: flex;
     flex-direction: column;
@@ -2855,6 +2893,18 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+    .object-gallery-pagination .swiper-pagination-current {
+    font-size: 32px;
+  }
+  .object-gallery-pagination {
+    font-size: 16px;
+  }
+  .breadcrumbs-link {
+    font-size: 12px;
+  }
+  .breadcrumbs-current {
+    font-size: 12px;
+  }
   .object-gallery {
     &.desktop {
       display: none  !important;
@@ -2886,7 +2936,7 @@ body.no-scroll {
           &-wrap {
       padding: 30px 0;
       position: relative;
-      &::before {
+     /*  &::before {
         content: "";
         position: absolute;
         top: 0;
@@ -2907,7 +2957,7 @@ body.no-scroll {
         background: url(../images/object-after.svg) no-repeat;
         background-size: contain;
         transform: translateX(-50%);
-      }
+      } */
     }
     }
   }
@@ -2923,7 +2973,9 @@ font-size: 16px;
     flex-direction: column;
     align-items: flex-start;
     gap:20px;
+
   }
+
       .object-autor-position {
         max-width: 100%;
         width: 100%;
@@ -3108,8 +3160,11 @@ width: 25%;
   .filter-container-body {
     padding: 0;
   }
-  .object-gallery-controls-wrap {
-    display: none;
+  .object-gallery-prev {
+      padding: 15px 19px;
+  }
+  .object-gallery-next {
+      padding: 15px 19px;
   }
   .object-top {
     flex-direction: column;
