--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -885,7 +885,12 @@ body.no-scroll {
   width: 100%;
   position: absolute;
   gap: 10px;
-  padding-right: 60px;
+  padding-right: 100px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+.catalog-location-container::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 .catalog-filters {
   padding-top: 50px;
@@ -1226,7 +1231,7 @@ body.no-scroll {
   width: 100%;
   height: 2px;
   top: 0px;
-  background: none;
+  background: rgba(20, 52, 91, 0.3019607843);
   pointer-events: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -1238,7 +1243,7 @@ body.no-scroll {
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  background: #14345b;
+  background: rgba(20, 52, 91, 0.3019607843);
   pointer-events: auto;
   cursor: pointer;
 }
@@ -1260,7 +1265,7 @@ body.no-scroll {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #f7f9fa;
-  padding: 0 20px; /* убрал вертикальный padding, чтобы всё чётко влезало */
+  padding: 0 20px;
   width: 95%;
   height: 95%;
   z-index: 1000;
@@ -1787,15 +1792,16 @@ body.no-scroll {
   height: 2px;
   background: rgba(20, 52, 91, 0.3019607843);
   margin-top: 20px;
+  border-radius: 5px;
 }
 
-.catalog-range .catalog-progress {
+.catalog-progress {
   position: absolute;
   height: 100%;
   background: #14345b;
   border-radius: 5px;
-  left: 0;
-  width: 50%;
+  left: 0%;
+  right: 0%;
 }
 
 .catalog-range input[type=range] {
@@ -1803,17 +1809,28 @@ body.no-scroll {
   width: 100%;
   height: 2px;
   top: 0;
-  background: none;
+  background: none; /* ✅ Прозрачный фон */
   pointer-events: none;
   -webkit-appearance: none;
   -moz-appearance: none;
        appearance: none;
+  margin: 0;
+}
+
+.range-min {
+  left: 0;
+  z-index: 2;
+}
+
+.range-max {
+  right: 0;
+  z-index: 2;
 }
 
 .catalog-range input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   background: #14345b;
   pointer-events: auto;
@@ -1821,8 +1838,8 @@ body.no-scroll {
 }
 
 .catalog-range input[type=range]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   background: #14345b;
   pointer-events: auto;
@@ -2207,6 +2224,9 @@ body.no-scroll {
   }
   .header-mobile.active {
     display: block;
+    height: 100%;
+    overflow-y: auto;
+    padding-bottom: 100px;
   }
   .header-mobile-button {
     display: block;
@@ -2768,6 +2788,18 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .filter-container-body-price {
+    padding-top: 10px;
+  }
+  .dream__top {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .dream__link {
+    width: 100%;
+    text-align: center;
+  }
   .object-gallery-pagination .swiper-pagination-current {
     font-size: 32px;
   }
@@ -3005,9 +3037,13 @@ body.no-scroll {
     flex-direction: column;
     align-items: flex-start;
   }
+  .filter-container {
+    position: relative;
+  }
   .filter-container-end img {
     position: absolute;
-    right: 0;
+    right: 20px;
+    top: 0;
   }
   .filter-container-item {
     font-size: 16px;
