--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -929,7 +929,12 @@ body.no-scroll {
       width: 100%;
       position: absolute;
       gap: 10px;
-      padding-right: 60px;
+      padding-right: 100px;
+        scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+  &::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
     }
   }
   &-filters {
@@ -1283,7 +1288,7 @@ body.no-scroll {
   width: 100%;
   height: 2px;
   top: 0px;
-  background: none;
+  background: #14345B4D;
   pointer-events: none;
   -webkit-appearance: none;
   appearance: none;
@@ -1294,7 +1299,7 @@ body.no-scroll {
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  background: #14345b;
+  background: #14345B4D;
   pointer-events: auto;
   cursor: pointer;
 }
@@ -1316,7 +1321,7 @@ body.no-scroll {
   left: 50%;
   transform: translate(-50%, -50%);
   background: #f7f9fa;
-  padding: 0 20px; /* убрал вертикальный padding, чтобы всё чётко влезало */
+  padding: 0 20px; 
   width: 95%;
   height: 95%;
   z-index: 1000;
@@ -1834,22 +1839,22 @@ body.no-scroll {
     color: #14345b;
   }
 }
-
 .catalog-range {
   position: relative;
   width: 100%;
   height: 2px;
-  background: #14345b4d;
+  background: #14345B4D;
   margin-top: 20px;
+  border-radius: 5px;
 }
 
-.catalog-range .catalog-progress {
+.catalog-progress {
   position: absolute;
   height: 100%;
   background: #14345b;
   border-radius: 5px;
-  left: 0;
-  width: 50%;
+  left: 0%;
+  right: 0%;
 }
 
 .catalog-range input[type="range"] {
@@ -1857,16 +1862,27 @@ body.no-scroll {
   width: 100%;
   height: 2px;
   top: 0;
-  background: none;
+  background: none; /* ✅ Прозрачный фон */
   pointer-events: none;
   -webkit-appearance: none;
   appearance: none;
+  margin: 0;
+}
+
+.range-min {
+  left: 0;
+  z-index: 2;
+}
+
+.range-max {
+  right: 0;
+  z-index: 2;
 }
 
 .catalog-range input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   background: #14345b;
   pointer-events: auto;
@@ -1874,8 +1890,8 @@ body.no-scroll {
 }
 
 .catalog-range input[type="range"]::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   background: #14345b;
   pointer-events: auto;
@@ -2273,11 +2289,15 @@ body.no-scroll {
       padding: 120px 0 0 0;
       &.active {
         display: block;
+        height: 100%;
+        overflow-y: auto;
+        padding-bottom: 100px;
       }
       &-button {
         display: block;
         &.active {
           display: block;
+          
           .header-mobile-close {
             display: block;
           }
@@ -2893,6 +2913,19 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .filter-container-body-price {
+    padding-top: 10px;
+  }
+  .dream__top {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .dream__link {
+      
+        width: 100%;
+        text-align: center;
+    }
     .object-gallery-pagination .swiper-pagination-current {
     font-size: 32px;
   }
@@ -3146,9 +3179,13 @@ width: 25%;
     flex-direction: column;
     align-items: flex-start;
   }
+  .filter-container {
+    position: relative;
+  }
   .filter-container-end img {
     position: absolute;
-    right: 0;
+    right: 20px;
+    top: 0;
   }
   .filter-container-item {
     font-size: 16px;
