--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -187,17 +187,11 @@ body.no-scroll {
     justify-content: space-between;
     position: relative;
     padding-bottom: 20px;
-    &::before {
-      content: "";
-      background-image: url("../images/divider.svg");
-      background-size: cover;
-      width: 90%;
-      height: 1px;
-      background-repeat: no-repeat;
+    &-divider {
+      bottom: 0;
       position: absolute;
-      bottom: 0px;
-      left: 50%;
-      transform: translateX(-50%);
+      height: 1px;
+      width: 100%;
     }
   }
   &__start {
@@ -1340,15 +1334,11 @@ body.no-scroll {
   position: relative;
   flex-shrink: 0;
   position: relative;
-  &::before {
-    content: "";
-    background-image: url("../images/object-after.svg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 1px;
+  &-divider {
     position: absolute;
     bottom: 0;
+    height: 1px;
+    width: 100%;
   }
 }
 
@@ -1472,8 +1462,12 @@ body.no-scroll {
     }
     &-prev {
       cursor: pointer;
-      padding: 19px 23px;
+      width: 56px;
+      height: 56px;
       border: 1px solid #f7f9fa;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       &:hover {
         transition: all 0.3s;
         background: #f7f9fa;
@@ -1488,8 +1482,12 @@ body.no-scroll {
       }
     }
     &-next {
+            display: flex;
+      align-items: center;
+      justify-content: center;
       cursor: pointer;
-      padding: 19px 23px;
+      width: 56px;
+      height: 56px;
       border: 1px solid #f7f9fa;
       &:hover {
         transition: all 0.3s;
@@ -2077,21 +2075,21 @@ body.no-scroll {
   padding: 180px 0 0 0;
   position: relative;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: url("../images/divider.svg") no-repeat center;
-  }
 
   &__content {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
+    position: relative;
+  &-divider {
+      top: 0;
+      position: absolute;
+      height: 1px;
+      width: 80%;
+        left: 50%;
+  transform: translateX(-50%);
+    }
   }
   &__column {
     &:nth-child(3) {
@@ -2928,6 +2926,12 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .object-gallery-prev, .object-gallery-next {
+    svg {
+      width: 10px;
+      height: 18px;
+    }
+  }
   .filters-popup-header::before {
     background-size: contain;
   }
@@ -3216,10 +3220,20 @@ width: 25%;
     padding: 0;
   }
   .object-gallery-prev {
-      padding: 15px 19px;
+  width: 48px;
+  height: 48px;
+  svg {
+    min-width: fit-content;
+    min-height: fit-content;
+  }
   }
   .object-gallery-next {
-      padding: 15px 19px;
+  width: 48px;
+  height: 48px;
+  svg {
+    min-width: fit-content;
+    min-height: fit-content;
+  }
   }
   .object-top {
     flex-direction: column;
