--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2805,6 +2805,10 @@ body.no-scroll {
   .object-gallery-prev svg, .object-gallery-next svg {
     width: 10px;
     height: 18px;
+    min-width: 10px;
+    min-height: 18px;
+    max-width: 10px;
+    max-height: 18px;
   }
   .filters-popup-header::before {
     background-size: contain;
