--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2930,6 +2930,10 @@ body.no-scroll {
     svg {
       width: 10px;
       height: 18px;
+      min-width: 10px;
+      min-height: 18px;
+      max-width: 10px;
+      max-height: 18px;
     }
   }
   .filters-popup-header::before {
