--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -197,6 +197,17 @@ body.no-scroll {
    }
   &.header-main-page {
     background: transparent;
+    &.active {
+      background: #e6eef5;
+      .header__logo {
+        svg {
+          path {
+            fill: #14345B;
+            stroke: #14345B;
+          }
+        }
+      }
+    }
     .header__content-divider {
       display: none;
     }
@@ -462,9 +473,9 @@ body.no-scroll {
   &__favorite {
     &-wrap {
       position: fixed;
-      bottom: 130px;
+      bottom: 60px;
       right: 30px;
-      z-index: 99;
+      z-index: 29;
     }
     background: url("../images/wishlist.svg") no-repeat;
     background-size: cover;
@@ -3445,7 +3456,6 @@ border-bottom: 1px solid #14345B;
     font-weight: 500;
     font-size: 20px;
     line-height: 100%;
-    letter-spacing: -2px;
     color: #2B2B2B;
     padding-left: 20px;
     padding-bottom: 10px;
@@ -3632,7 +3642,6 @@ padding-top: 10px;
   .contacts-breadcrumbs {
     position: absolute;
     top: 50px;
-    left: 0;
   }
 }
 .privacy {
@@ -3769,7 +3778,7 @@ text-transform: uppercase;
       width: 100%;
       height: 100%;
       position: absolute;
-      top: 90px;
+      top: 75px;
       right: 0;
       left: 0;
       z-index: 20;
@@ -3829,6 +3838,10 @@ text-transform: uppercase;
         align-items: center;
         justify-content: flex-start;
         gap: 30px;
+        .current {
+          text-decoration: underline;
+          padding-bottom: 3px;
+        }
         &-item {
           font-family: "Cormorant";
           font-weight: 500;
@@ -3961,6 +3974,12 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1366px) {
+  .privacy {
+    padding-bottom: 160px;
+  }
+  .dream {
+    padding: 160px 0;
+  }
   .contact-map {
     padding-top: 160px;
   }
@@ -4115,6 +4134,9 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1280px) {
+   .dream {
+    padding: 140px 0;
+  }
   .finale-cards {
     margin-top: 30px;
   }
@@ -4200,6 +4222,9 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1230px) {
+    .privacy {
+    padding-bottom: 140px;
+  }
   .contacts-content {
     gap:80px;
   }
@@ -4390,6 +4415,12 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1024px) {
+  .contacts-info {
+  width: 100%;
+}
+.contacts-form-wrap {
+  width: 100%;
+}
 .panorama-slide::before {
   height: 40%;
 }
@@ -4513,12 +4544,7 @@ color: #F7F9FA;
   
 }
 
-.contacts-info {
-  width: 100%;
-}
-.contacts-form-wrap {
-  width: 100%;
-}
+
 @media (max-width: 1020px) {
   .contacts-info-divider-horizontal {
  display: block;
@@ -5158,6 +5184,41 @@ letter-spacing: -2%;
   }
 }
 @media (max-width: 720px) {
+  .privacy {
+    padding-top: 100px;
+  }
+    .privacy {
+    padding-bottom: 100px;
+  }
+      .dream {
+        padding: 100px 0;
+    }
+    .dream__top {
+      padding-bottom: 30px;
+    }
+  .article-card-link {
+    width: 100%;
+  }
+
+  .contacts-breadcrumbs-wrap .contacts-breadcrumbs {
+    top: 0;
+  }
+  .catalog {
+        padding: 100px 15px 180px 15px;
+  }
+  .object {
+    padding-top: 80px;
+  }
+  .blog {
+        padding: 90px 0 180px 0;
+
+  }
+  .header__content {
+    padding: 5px 0;
+  }
+  .hero__favorite-wrap {
+    bottom: 16px;
+  }
   .privacy-description {
     font-size: 18px;
   }
