--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3639,6 +3639,11 @@ body.no-scroll {
   padding-bottom: 30px;
 }
 
+@media (max-width: 1920px) {
+  .about {
+    height: 1080px;
+  }
+}
 @media (max-width: 1760px) {
   .about-column:nth-child(1)::before {
     left: 25%;
@@ -5016,6 +5021,9 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .pt100 {
+    padding-top: 80px;
+  }
   .privacy {
     padding-top: 100px;
   }
