--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -409,15 +409,21 @@ body.no-scroll {
 }
 
 .hero {
-  background: url("../images/hero-bg.png") no-repeat;
-  background-size: cover;
   height: 1080px;
   padding: 200px 0 130px 0;
   .container {
     position: relative;
     height: 100%;
   }
-
+  &__video {
+      position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  }
   &__content {
     display: flex;
     align-items: flex-end;
@@ -3357,6 +3363,7 @@ color: #14345B;
 padding-bottom: 140px;
 span {
   text-transform: lowercase;
+  font-style: italic;
 }
 }
 .contacts-autor {
@@ -3429,6 +3436,7 @@ color: #14345B;
   color: #14345B;
 span {
   text-transform: lowercase;
+  font-style: italic;
 }
 }
 .contacts-form-description {
