--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -370,7 +370,10 @@ body.no-scroll {
 
 .hero {
   height: 1080px;
+  position: relative;
+  min-height: 1080px;
   padding: 200px 0 130px 0;
+  overflow: hidden;
 }
 .hero .container {
   position: relative;
@@ -378,10 +381,13 @@ body.no-scroll {
 }
 .hero__video {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  min-width: 101%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -1;
@@ -3905,6 +3911,9 @@ body.no-scroll {
   }
 }
 @media (max-width: 1366px) {
+  .hero {
+    min-height: 1024px;
+  }
   .privacy {
     padding-bottom: 160px;
   }
@@ -4305,6 +4314,9 @@ body.no-scroll {
   }
 }
 @media (max-width: 1024px) {
+  .hero {
+    min-height: 768px;
+  }
   .contacts-info {
     width: 100%;
   }
@@ -4791,6 +4803,9 @@ body.no-scroll {
   }
 }
 @media (max-width: 768px) {
+  .hero {
+    min-height: 1024px;
+  }
   .privacy-description {
     font-size: 20px;
   }
@@ -5031,6 +5046,9 @@ body.no-scroll {
   }
 }
 @media (max-width: 720px) {
+  .hero {
+    min-height: 812px;
+  }
   .pt100 {
     padding-top: 80px;
   }
