--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -98,6 +98,9 @@ body.no-scroll {
   overflow: hidden;
 }
 
+.hero__favorite {
+  cursor: pointer;
+}
 .breadcrumbs {
   display: flex;
   align-items: center;
@@ -408,6 +411,67 @@ body.no-scroll {
   }
 }
 
+.popup-wishlist-wrap {
+  display: none;
+  &.is-active {
+    display: flex;
+  }
+}
+.popup-wishlist-close {
+  cursor: pointer;
+}
+body.no-scroll::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  backdrop-filter: blur(8px);
+  background: rgba(0,0,0,0.2); /* можно затемнение */
+  z-index: 9990; /* ниже попапа */
+}
+
+.popup-wishlist {
+  background: #E6EEF5;
+  border: 1px solid #14345B;
+  padding: 50px 65px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  max-width: 1280px;
+  z-index: 9999;
+  max-height: 825px;
+  height: 100%;
+      top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+
+}
+.popup-wishlist-top { 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.popup-wishlist-title {
+font-family: "Cormorant";
+font-weight: 600;
+font-size: 80px;
+line-height: 100%;
+text-transform: uppercase;
+color: #14345B;
+}
+.popup-wishlist-content {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap:0px;
+  overflow-y: auto;
+  height: 100%;
+  padding-bottom: 50px;
+
+  .product-card {
+    width: calc(100% / 2);
+  }
+}
 .hero {
   height: 1080px;
     position: relative;
@@ -3711,6 +3775,7 @@ padding: 30px 0;
 .privacy-breadcrumbs {
     padding-bottom: 30px;
 }
+
 @media(max-width:1920px) {
   .about {
     height: 1080px;
@@ -4085,6 +4150,27 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1340px) {
+
+  .popup-wishlist {
+    padding: 40px 20px;
+    max-width: 95%;
+  }
+  .popup-wishlist-title {
+    font-size: 64px;
+  }
+  .popup-wishlist {
+    min-height: 740px;
+  }
+  .popup-wishlist-top {
+    padding-bottom: 30px;
+  }
+  .popup-wishlist-content {
+    gap:15px;
+    .product-card {
+      width: calc(50% - 15px);
+    }
+  }
+  
   .about-column:nth-child(1) {
     .about-autor {
       display: block;
@@ -5213,6 +5299,24 @@ letter-spacing: -2%;
   }
 }
 @media (max-width: 720px) {
+  .popup-wishlist-content {
+    align-items: flex-start;
+  }
+  .popup-wishlist-title {
+    font-size: 32px;
+  }
+  .popup-wishlist {
+    top:50%;
+    max-height: 95%;
+    padding-bottom: 100px;
+    padding: 30px 10px;
+  }
+  .popup-wishlist-content  {
+    gap:30px;
+  }
+      .popup-wishlist-content .product-card {
+        width: 100%;
+    }
    .hero {
     min-height: 812px;
   }
