--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -428,7 +428,10 @@ body.no-scroll::after {
   background: rgba(0,0,0,0.2); /* можно затемнение */
   z-index: 9990; /* ниже попапа */
 }
-
+.popup-wishlist-wrap {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .popup-wishlist {
   background: #E6EEF5;
   border: 1px solid #14345B;
@@ -444,7 +447,37 @@ body.no-scroll::after {
   left: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  .contacs {
+      padding-top: 0;
+      background: transparent;
+  }
+  .contacts-content-wrap {
+    margin-top: 0;
+  }
+  .contacts-content {
+    padding: 0;
+    border: none;
+  }
+}
+.popup-contact-wishlist-wrap {
+  display: none;
 
+  &.is-active {
+    display: flex;
+  }
+  .popup-contact-wishlist {
+  background-size: contain;
+  background-repeat: no-repeat;
+  }
+  .popup-wishlist {
+max-height: 740px;
+padding: 80px 60px;
+  }
+}
+.popup-contact-wishlist-close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
 }
 .popup-wishlist-top { 
   display: flex;
@@ -4150,6 +4183,13 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1340px) {
+  .popup-contact-wishlist-wrap {
+  .popup-wishlist {
+    padding: 40px;
+    min-height: 700px;
+    height: 700px;
+  }
+  }
 
   .popup-wishlist {
     padding: 40px 20px;
@@ -4658,6 +4698,11 @@ color: #F7F9FA;
 
 
 @media (max-width: 1020px) {
+  .popup-contact-wishlist-wrap .popup-wishlist {
+    min-height: initial;
+    max-height: 1300px;
+      height: fit-content;
+  }
   .contacts-info-divider-horizontal {
  display: block;
         position: absolute;
@@ -5299,6 +5344,12 @@ letter-spacing: -2%;
   }
 }
 @media (max-width: 720px) {
+  .popup-contact-wishlist-wrap .popup-wishlist {
+    padding: 40px 20px;
+    .contacts-title {
+      max-width: 295px;
+    }
+  }
   .popup-wishlist-content {
     align-items: flex-start;
   }
