--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -478,6 +478,7 @@ padding: 80px 60px;
   position: absolute;
   top: 30px;
   right: 30px;
+  z-index: 99;
 }
 .popup-wishlist-top { 
   display: flex;
@@ -3808,7 +3809,10 @@ padding: 30px 0;
 .privacy-breadcrumbs {
     padding-bottom: 30px;
 }
-
+.popup-wishlist {
+  height: 95%;
+  overflow-y: auto;
+}
 @media(max-width:1920px) {
   .about {
     height: 1080px;
@@ -4183,6 +4187,11 @@ text-transform: uppercase;
   }
 }
 @media (max-width: 1340px) {
+  .popup-wishlist {
+    top: 50px;
+transform: translateX(-50%); 
+
+  }
   .popup-contact-wishlist-wrap {
   .popup-wishlist {
     padding: 40px;
@@ -4194,6 +4203,7 @@ text-transform: uppercase;
   .popup-wishlist {
     padding: 40px 20px;
     max-width: 95%;
+    height: 95%;
   }
   .popup-wishlist-title {
     font-size: 64px;
@@ -4701,7 +4711,7 @@ color: #F7F9FA;
   .popup-contact-wishlist-wrap .popup-wishlist {
     min-height: initial;
     max-height: 1300px;
-      height: fit-content;
+      height: 95%;
   }
   .contacts-info-divider-horizontal {
  display: block;
@@ -5357,7 +5367,7 @@ letter-spacing: -2%;
     font-size: 32px;
   }
   .popup-wishlist {
-    top:50%;
+    top:20px;
     max-height: 95%;
     padding-bottom: 100px;
     padding: 30px 10px;
